# ELCpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
script/: build.sh  dependencies.sh
src/: point.hpp  test_point.cpp  utils_const.hpp
